# dartserver-pythonapp

./: .dockerignore  .env.development.example  .env.example  .env.localhost-http  .env.localhost-https  .env.production.example  .env__  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-config.yaml_  .secrets.baseline  .yamllint.yaml  ARCHITECTURE.md  AUTHENTICATION_SUMMARY.md  AUTH_BYPASS_FIX.md  BANNER.txt  CHANGES_SUMMARY.md  CHECKLIST.md  COMPLETE_REDIRECT_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DOCKER_FIX_SUMMARY.md  DOCKER_NETWORK_EXPLAINED.md  Dockerfile  Dockerfile.gateway  FINAL_FIX_SUMMARY.md  FIXES_SUMMARY.md  FIXES_SUMMARY.txt  FIX_COMPLETE_SUMMARY.txt  FIX_LOCALHOST_LOGIN_REDIRECT.md  FIX_REDIRECT_URIS.md  FIX_STATUS.md  FIX_SUMMARY_502_GATEWAY.txt  GET_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY_AUTO_REGISTRATION_HISTORY.md  INDEX.md  (+104 more)
.git-hooks/: pre-commit
.github/: copilot-instructions.md
.tox/.tmp/package/26/: dartserver_pythonapp-1.0.0-py3-none-any.whl
.zencoder/: REFACTORING_STATUS.md
alembic/: env.py
alembic/versions/: 95f33c1ce707_initial_migration_create_player_.py  d55f29e75045_add_mobile_app_tables.py  e1a2b3c4d5e6_fix_dartboard_schema.py
docker-backups/2025-10-14_18-02-07/: BACKUP_MANIFEST.txt
docker-backups/2025-10-14_18-02-07/config/nginx/: nginx.conf  nginx.crt
docker-backups/2025-10-14_18-02-07/config/nginx/ssl/: nginx.crt  nginx.key
docs/: API_GATEWAY_README.md  ARCHITECTURE.md  AUTHENTICATION_FLOW.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_SUMMARY.md  AUTH_BYPASS.md  AUTH_BYPASS_FIX.md  AUTO_REFRESH.md  AUTO_REFRESH_IMPLEMENTATION.md  BACKUP_AND_UPGRADE_STATUS.md  BACKUP_COMPLETE.md  BACKUP_QUICK_REFERENCE.md  BUILD_STRUCTURE_CHANGES.md  CHANGELOG_REMOTE_LOGIN.md  CHANGELOG_SSL_ERROR_HANDLING.md  CHANGES_APPLIED.md  CHANGES_APPLIED_DETAILED.md  CHANGES_SUMMARY.md  CHECKLIST.md  COMPLETE_REDIRECT_FIX.md  CONTROL_PANEL_FIXES.md  DATABASE_FIX_SUMMARY.md  DATABASE_HISTORY_FIX.md  DATABASE_LOGGING_FIX_SUMMARY.md  DATABASE_MIGRATIONS.md  DEMO_TTS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  ENVIRONMENT_QUICK_START.md  FINAL_FIX_SUMMARY.md  FIXES_SUMMARY.md  FIX_LOCALHOST_LOGIN_REDIRECT.md  FIX_MISSING_AUTH_PREFIX.md  FIX_REDIRECT_URIS.md  GAMEMASTER_COMPLETION_REPORT.md  GAMEMASTER_QUICK_START.md  (+108 more)
examples/: api_client_example.py  api_examples.py  dartboard_client.py  demo_turn_tracking.py  test_auto_refresh.py  websocket_client.py
games/: __init__.py  game_301.py  game_cricket.py
helpers/: RESTART_AND_FIX.sh  backup_docker_volumes.sh  check_dennis.py  check_linting.sh  cleanup_phantom_players.py  configure-localhost-login.sh  configure-wso2-roles.sh  configure-wso2.sh  configure_wso2_redirects.py  create_pwa_icons_pil.py  debug_dennis_session.py  fix-wso2-localhost-callback.py  fix_callback_urls.py  fix_wso2_callback_dcr.py  fix_wso2_callback_urls.py  generate_pwa_icons.py  generate_sample_game_data.py  generate_ssl_certs.sh  migrate_build_structure.sh  setup_local_domain.sh  setup_wso2_roles.py  test-authentication.sh  test-wso2-integration.sh  test_game_tts.py  test_mobile_app.py  test_remove_player.py  test_single_player.py  test_ssl_error_handling.py  test_swagger_fixed.py  test_swagger_validation.py  test_tts_client.py  test_tts_simple.py  update_wso2_callback_urls.sh  upgrade_wso2_to_7.sh  verify_linting.sh  verify_oauth_fix.sh  verify_wso2_roles.py
nginx/: nginx.conf  nginx.key
nginx/ssl/: cert.pem  key.pem
scripts/: verify-redirect-config.sh
src/: __init__.py  config.py  mobile_service.py
src/api/: __init__.py
src/api_gateway/: __init__.py  app.py
src/app/: __init__.py  app.py  game_manager.py  mobile_service.py
src/core/: __init__.py  auth.py  config.py  database_models.py  database_service.py  tts_service.py
src/games/: __init__.py
ssl/: cert.pem  key.pem  openssl.cnf
static/: manifest.json  service-worker.js
static/css/: control.css  dashboard.css  mobile.css  mobile_gamemaster.css  style.css
static/icons/: GENERATE_ICONS.md  README.md
static/js/: control.js  dashboard.js  main.js  mobile.js  mobile_account.js  mobile_dartboard_setup.js  mobile_gamemaster.js  mobile_gameplay.js  mobile_hotspot.js  mobile_results.js
templates/: control.html  dashboard.html  history.html  index.html  login.html  mobile.html  mobile_account.html  mobile_dartboard_setup.html  mobile_gamemaster.html  mobile_gameplay.html  mobile_hotspot.html  mobile_results.html  test_refresh.html
tests/: __init__.py  conftest.py
tests/integration/: test_app_endpoints.py  test_game_scenarios.py  test_multi_game_api.py  test_websocket_events.py
tests/unit/: test_app.py  test_app_database_endpoints.py  test_auth.py  test_checkout_advice.py  test_config.py  test_control_panel_fixes.py  test_database_service.py  test_game_301.py  test_game_cricket.py  test_game_manager.py  test_game_manager_edge_cases.py  test_login_redirect.py  test_mobile_service.py  test_multi_game_manager.py  test_rabbitmq_consumer.py  test_ssl_config.py  test_tts_service.py
wso2is-7-config/: deployment.prod.example.toml  deployment.toml
wso2is-config/: deployment.toml
